--- a/chatgpt-frontend/src/App.css
+++ b/chatgpt-frontend/src/App.css
@@ -57,7 +57,7 @@
 }
 
 .chat.selected {
-  background-color: #b4aeae;
+  background-color: #dcd9d9;
 }
 
 .chat-ui {
@@ -133,6 +133,7 @@
   line-height: 1.5rem;
   font-family: inherit;
 }
+
 .code-block {
   display: block;
   background-color: #f5f5f5;
@@ -150,13 +151,16 @@
   border-radius: 4px;
   font-family: monospace;
 }
+
 @keyframes dotPulse {
   0% {
     transform: translateY(0);
   }
+
   50% {
     transform: translateY(-50%);
   }
+
   100% {
     transform: translateY(0);
   }
@@ -187,4 +191,9 @@
 
 .typing-indicator .dot:nth-child(3) {
   animation-delay: 0.2s;
+}
+
+.chat-history hr {
+  border: none;
+  border-top: 1px solid #ccc;
 }
