--- a/chatgpt_frontend/src/App.css
+++ b/chatgpt_frontend/src/App.css
@@ -197,3 +197,25 @@
   border: none;
   border-top: 1px solid #ccc;
 }
+
+.footer {
+  margin-bottom: 20px;
+  position: fixed;
+  bottom: 0;
+  text-align: center; 
+}
+
+.footer a {
+  display: flex;
+  align-items: center;
+  color: #333;
+  text-decoration: none;
+}
+
+.footer a:hover {
+  text-decoration: underline;
+}
+
+.footer .icon {
+  margin-right: 5px;
+}
